--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
     "@tinacms/cli": "^1.6.1",
     "@tinacms/datalayer": "^1.3.1",
     "next": "14.2.1",
