--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: Screenshots ci actions
+name: Generate screenshots
 "on": pull_request_target
 
 permissions:
@@ -6,7 +6,7 @@ permissions:
   id-token: write
 
 jobs:
-  screenshots:
+  generate_screenshots:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,8 +39,8 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
-      - name: Build with Next.js
-        run: npx next build
+      - name: Start server
+        run: ${{ steps.detect-package-manager.outputs.manager }} dev
 
       - name: Test Code
         uses: mujo-code/puppeteer-headful@18.9.0
