--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -40,7 +40,7 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
       - name: Start server
-        run: ${{ steps.detect-package-manager.outputs.manager }} dev & sleep 5
+        run: ${{ steps.detect-package-manager.outputs.manager }} dev & sleep 5 && curl http://localhost:3000 -I
 
       - name: Test Code
         uses: mujo-code/puppeteer-headful@18.9.0
