fix: screenshot delay

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -49,6 +49,7 @@ jobs:
         with:
           url: http://localhost:3000
           devices: iPhone 6,iPhone 6 landscape,Nexus 7,Pad Pro,Galaxy S III landscape,iPad Pro landscape
+          waitUntil: networkidle0
           releaseId: 176094310
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
