--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -50,6 +50,7 @@ jobs:
           url: http://localhost:3000
           devices: iPhone 6,iPhone 6 landscape,Nexus 7,Pad Pro,Galaxy S III landscape,iPad Pro landscape
           waitUntil: networkidle0
+          noCommitHashFileName: true
           releaseId: 176094310
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
