fix: screenshot delay

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           url: http://localhost:3000
           devices: iPhone 6,iPhone 6 landscape,Nexus 7,Pad Pro,Galaxy S III landscape,iPad Pro landscape
-          waitUntil: networkidle0
+          waitUntil: domcontentloaded
           noCommitHashFileName: true
           releaseId: 176094310
         env:
