--- a/.github/workflows/generate-screenshots.yml
+++ b/.github/workflows/generate-screenshots.yml
@@ -4,7 +4,7 @@ name: Generate screenshots
 jobs:
   generate_screenshots:
     permissions: write-all
-    if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
+    if: "${{ github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' }}"
     runs-on: ubuntu-latest
 
     # checkout current PR code
