--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tinacms build --partial-reindex && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
