--- a/.github/workflows/run-jest-tests.yml
+++ b/.github/workflows/run-jest-tests.yml
@@ -17,7 +17,7 @@ jobs:
           repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install
 
       - name: Run tests
         run: |
