--- a/.github/workflows/run-jest-tests.yml
+++ b/.github/workflows/run-jest-tests.yml
@@ -3,7 +3,7 @@ name: Run jest tests
 
 jobs:
   run_jest_tests:
-    permissions: read-all
+    permissions: write-all
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
 
@@ -20,5 +20,9 @@ jobs:
         run: yarn install
 
       - name: Run tests
-        run: |
-          npx jest --coverage --coverageReporters json-summary
+        uses: ospfranco/gh-jester@v1.0.13
+        with:
+          post-comment: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_CONTEXT: ${{ toJson(github) }}
