--- a/.github/workflows/generate-screenshots.yml
+++ b/.github/workflows/generate-screenshots.yml
@@ -1,69 +1,69 @@
-name: Generate screenshots
-"on": pull_request_target
+# name: Generate screenshots
+# "on": pull_request_target
 
-jobs:
-  generate_screenshots:
-    permissions: write-all
-    if: "${{ github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' }}"
-    runs-on: ubuntu-latest
+# jobs:
+#   generate_screenshots:
+#     permissions: write-all
+#     if: "${{ github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' }}"
+#     runs-on: ubuntu-latest
 
-    # checkout current PR code
-    steps:
-      - name: Checking out PR code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha }}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
+#     # checkout current PR code
+#     steps:
+#       - name: Checking out PR code
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0
+#           ref: ${{ github.event.pull_request.head.sha }}
+#           repository: ${{github.event.pull_request.head.repo.full_name}}
 
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager" >&2
-            exit 1
-          fi
+#       - name: Detect package manager
+#         id: detect-package-manager
+#         run: |
+#           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+#             echo "manager=yarn" >> $GITHUB_OUTPUT
+#             echo "command=install" >> $GITHUB_OUTPUT
+#             echo "runner=yarn" >> $GITHUB_OUTPUT
+#             exit 0
+#           elif [ -f "${{ github.workspace }}/package.json" ]; then
+#             echo "manager=npm" >> $GITHUB_OUTPUT
+#             echo "command=ci" >> $GITHUB_OUTPUT
+#             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+#             exit 0
+#           else
+#             echo "Unable to determine package manager" >&2
+#             exit 1
+#           fi
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+#       - name: Setup Node
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: "20"
+#           cache: ${{ steps.detect-package-manager.outputs.manager }}
 
-      - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+#       - name: Install dependencies
+#         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
-      - name: Start server
-        run: ${{ steps.detect-package-manager.outputs.manager }} dev & sleep 10
+#       - name: Start server
+#         run: ${{ steps.detect-package-manager.outputs.manager }} dev & sleep 10
 
-      - name: Test Code
-        uses: mujo-code/puppeteer-headful@18.9.0
-        env:
-          CI: "true"
+#       - name: Test Code
+#         uses: mujo-code/puppeteer-headful@18.9.0
+#         env:
+#           CI: "true"
 
-      - name: screenshots-ci-action
-        uses: flameddd/screenshots-ci-action@master
-        with:
-          url: http://localhost:3000
-          devices: iPhone 6,iPhone 6 landscape,Nexus 7,Galaxy S III landscape,iPad Pro,iPad Pro landscape
-          waitUntil: networkidle0
-          noCommitHashFileName: true
-          releaseId: 176094310
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - name: screenshots-ci-action
+#         uses: flameddd/screenshots-ci-action@master
+#         with:
+#           url: http://localhost:3000
+#           devices: iPhone 6,iPhone 6 landscape,Nexus 7,Galaxy S III landscape,iPad Pro,iPad Pro landscape
+#           waitUntil: networkidle0
+#           noCommitHashFileName: true
+#           releaseId: 176094310
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Upload screenshots to Actions Artifacts
-      - uses: actions/upload-artifact@v4 # Uplaod screenshots to Actions Artifacts via actions/upload-artifact@v2
-        with:
-          path: screenshots
-          name: Download-screenshots
+#       # Upload screenshots to Actions Artifacts
+#       - uses: actions/upload-artifact@v4 # Uplaod screenshots to Actions Artifacts via actions/upload-artifact@v2
+#         with:
+#           path: screenshots
+#           name: Download-screenshots
