fix: jest tests

--- a/.github/workflows/run-jest-tests.yml
+++ b/.github/workflows/run-jest-tests.yml
@@ -19,10 +19,5 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name:
-        uses: mattallty/jest-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # this is just an example, this could be any command that will trigger jest
-          test-command: "yarn test"
+      - name: Run tests
+        run: jest --watchAll
