fix: jest tests

--- a/.github/workflows/run-jest-tests.yml
+++ b/.github/workflows/run-jest-tests.yml
@@ -20,4 +20,5 @@ jobs:
         run: yarn install
 
       - name: Run tests
-        run: npx jest --watchAll
+        run: |
+          npx jest --watchAll --coverage --coverageReporters json-summary
