fix: jest tests

--- a/.github/workflows/run-jest-tests.yml
+++ b/.github/workflows/run-jest-tests.yml
@@ -2,12 +2,19 @@ name: Run jest tests
 "on": pull_request_target
 
 jobs:
-  test:
+  run_jest_tests:
+    permissions: write-all
+    if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
 
+    # checkout current PR code
     steps:
-      - name: Checkout repository
+      - name: Checking out PR code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -17,5 +24,5 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Run Jest tests
-        run: yarn test:ci
+      - name: Run tests
+        run: yarn test
