--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "tinacms-gitprovider-github": "^2.0.2",
     "typescript": "^5.5.4",
     "upstash-redis-level": "^1.1.1"
+  },
+  "overrides": {
+    "@udecode/plate-core": "^36.5.9",
+    "micromatch": "^4.0.8"
   }
 }
