--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "postcss": "^8.4.41",
-    "react-test-renderer": "^18.3.1",
-    "tailwindcss": "^3.4.10"
+    "react-test-renderer": "^18.3.1"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
