--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "postcss": "^8.4.41",
-    "react-test-renderer": "^18.3.1"
+    "react-test-renderer": "^18.3.1",
+    "tailwindcss": "^3.4.10"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
@@ -41,9 +42,5 @@
     "tinacms-gitprovider-github": "^2.0.2",
     "typescript": "^5.5.4",
     "upstash-redis-level": "^1.1.1"
-  },
-  "overrides": {
-    "@udecode/plate-core": "^36.5.9",
-    "micromatch": "^4.0.8"
   }
 }
