--- a/.github/workflows/pr_build_and_test.yml
+++ b/.github/workflows/pr_build_and_test.yml
@@ -1,8 +1,8 @@
-name: Run jest tests
+name: Run build & tests
 "on": pull_request_target
 
 jobs:
-  run_jest_tests:
+  run_build_and__tests:
     permissions: write-all
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
@@ -20,9 +20,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+          cache: "yarn"
 
       - name: Install dependencies
         run: yarn install
+
+      - name: Run build
+        run: yarn build
 
       - name: Run tests
         run: yarn test:ci
