--- a/.github/workflows/pr_build_and_test.yml
+++ b/.github/workflows/pr_build_and_test.yml
@@ -26,7 +26,7 @@ jobs:
         run: yarn install
 
       - name: Run build
-        run: next build
+        run: npx next build
 
       - name: Run tests
         run: yarn test:ci
