--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev:prod": "TINA_PUBLIC_IS_LOCAL=false tinacms dev -c \"next dev\"",
     "build": "tinacms build --partial-reindex && next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watchAll",
-    "test:ci": "jest --testLocationInResults --ci --outputFile=test_results.json --json"
+    "lint": "next lint"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
@@ -20,9 +18,6 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.1",
     "eslint-config-next": "^14.2.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-junit": "^16.0.0",
     "postcss": "^8.4.41",
     "react-test-renderer": "^18.3.1",
     "tailwindcss": "^3.4.10"
